--- a/src/Kconfig
+++ b/src/Kconfig
@@ -190,6 +190,10 @@ config WANT_GPIO_SPI
     bool
     depends on HAVE_GPIO && HAVE_GPIO_SPI
     default y
+config WANT_ADS1118
+    bool
+    depends on HAVE_GPIO_SPI
+    default y
 config WANT_GPIO_ADC
     bool
     depends on HAVE_GPIO && HAVE_GPIO_ADC
@@ -275,6 +279,9 @@ config WANT_HX71X
 config WANT_ADS1220
     bool "Support ADS 1220 ADC chip"
     depends on WANT_SPI
+config WANT_ADS1118
+    bool "Support ADS1118 ADC"
+    depends on HAVE_GPIO_SPI
 config WANT_LDC1612
     bool "Support ldc1612 eddy current sensor chip"
     depends on WANT_I2C
